# uMVS

./: .gitignore  CMakeLists.txt  ReadMe.md  autobuild.sh
cmake/: FindOpenCV.cmake
inc/: utils.h
inc/camera/: binocamera.h  binouwcamera.h  camera_model.h  monocamera.h  monocular_uwcamera.h  monouwcamera.h
inc/geometry/: vector.h
inc/optics/: geometry.h  nsga2.h  quartic_solver.h  refraction.h
models/: binocam_0310.yml  binocam_1110.yml  binocam_20241219.yaml  binouwcam_0310.yaml  binouwcam_1110.yaml  binouwcam_20241219.yaml  mono_l_20241219.yaml  mono_r_20241219.yaml  mono_uw_0310_left.yaml  mono_uw_0310_right.yaml  mono_uw_1110_left.yaml  mono_uw_1110_right.yaml  mono_uw_virtual.yaml
py/: composite.py  draw.py  draw_bino.py  draw_pareto_front.py  draw_pareto_front_3d.py  plot_calibratebinouw_log.py
src/: CMakeLists.txt  calibrateBino.cpp  calibrateBinoUW.cpp  epipolar_uw.cpp  rectify.cpp  rectifyUW.cpp
src/camera/: CMakeLists.txt  binocamera.cpp  binouwcamera.cpp  camera_model.cpp  monocamera.cpp  monocular_uwcamera.cpp  monouwcamera.cpp
src/optics/: CMakeLists.txt  geometry.cpp  nsga2.cpp  quartic_solver.cpp
test/: 00_simple_refraction.cpp  00_test_camera_model.cpp  01_test_calibration.cpp  02_test_uwcamera.cpp  03_test_rectify.cpp  04_test_uw_epipolar.cpp  05_test_quartic_solver.cpp  06_test_reprojection_error.cpp  07_test_stereo_rectify.cpp  08_vertical_error_of_rectify.cpp  CMakeLists.txt
test/calibrate/: CMakeLists.txt  calibrateMono.cpp
test/camera/: CMakeLists.txt  test_binouwcamera_reproj.cpp  test_monocamera.cpp  test_monouwcamera.cpp  test_reprojection_error.cpp
test/solver/: CMakeLists.txt  test_nsga2_bnh.cpp  test_nsga2_dtlz1.cpp  test_nsga2_dtlz2.cpp  test_nsga2_zdt1.cpp  test_nsga2_zdt2.cpp  test_nsga2_zdt3.cpp  test_nsga2_zdt4.cpp  test_nsga2_zdt6.cpp  test_quartic_solver_scale.cpp  test_single_solver.cpp  test_svd.cpp
test/stereo/: CMakeLists.txt  test_line_intersection_scale.cpp  test_vertical_error_of_rectify.cpp
