add_executable(test_vertical_error_of_rectify test_vertical_error_of_rectify.cpp)
target_link_libraries(test_vertical_error_of_rectify ${PROJECT_NAME} ${ALL_LIBS})

add_executable(test_line_intersection_scale test_line_intersection_scale.cpp)
target_link_libraries(test_line_intersection_scale ${PROJECT_NAME} ${ALL_LIBS})